Fix link overflow issue

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -82,6 +82,11 @@
     margin-bottom: 12px;
 }
 
+.chatMessageGptLink {
+    justify-content: flex-end;
+    margin-bottom: 12px;
+}
+
 .chatMessageUserMessage {
     display: flex;
     padding: 20px;
